# mesh-example

./: CMakeLists.txt  package.xml
launch/: load_map.launch  map_markers.launch
meshes/post/: post1.dae  post2.dae  post3.dae  post4.dae  post5.dae
rviz/: load_map.rviz  map_markers.rviz
scripts/: make_markers.py  map_markers.py
src/: edit_obstacles.cpp  extract_clusters.cpp  load_map.cpp
