<?xml version="1.0"?>
<package>
  <name>map_visualization_2</name>
  <version>0.0.0</version>
  <description>The map_visualization_2 package</description>

  <maintainer email="mtyu@andrew.cmu.edu">Megan Yu</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
	<build_depend>sensor_msgs</build_depend>
	<build_depend>visualization_msgs</build_depend>
	<build_depend>geometry_msgs</build_depend>
	<build_depend>interactive_markers</build_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>rospy</build_depend>
	<build_depend>libpcl-all-dev</build_depend>
	<build_depend>octomap</build_depend>
	<build_depend>pcl_ros</build_depend>

	<run_depend>sensor_msgs</run_depend>
	<run_depend>visualization_msgs</run_depend>
	<run_depend>interactive_markers</run_depend>
	<run_depend>geometry_msgs</run_depend>
	<run_depend>roscpp</run_depend>
	<run_depend>rospy</run_depend>
	<run_depend>libpcl-all</run_depend>
	<run_depend>octomap</run_depend>
	<run_depend>pcl_ros</run_depend>

  <export>
  </export>
</package>
